ffmpegfs NEWS

Important changes in 1.4 (2018-05-XX)

* Feature:

* Bugfix: 

* Fix deprecation: 2018-xx-xx - xxxxxxx - lavf 58.9.100 - avformat.h
    Deprecate use of  av_iformat_next(), av_oformat_next().

Important changes in 1.3 (2018-05-04)

Changes in this release:

* Feature: Add option to deinterlace video if required (will improve picture
           quality when viewed in browsers via HTML5.
* Feature: Set stream duration from source file as hint for encoder.
* Feature: Enhanced logging output for better readability.
* Feature: Add pre-buffer option. Files will be decoded up to this limit first
           before made accessible. This ensures smoot startup.
* Feature: Enhanced configure that checks whether libavresample or libswresample 
           is present.
* Feature: Improved recoding detection. Files are recoded if the source file size 
           or timestamp changes, or different encoding options are selected 
           (e.g. a different bitrate, vidoe size etc.).
* Feature: Allow profiles for target browsers or players. Currently selectable:
           NONE     no profile
           FF       optimise for Firefox
           EDGE     optimise for MS Edge and Internet Explorer > 11
           IE       optimise for MS Edge and Internet Explorer <= 11
           CHROME   Google Chrome
           SAFARI   Apple Safari
           OPERA    Opera
           MAXTHON  Maxthon
           Defaults to NONE
* Feature: enhanced error output for SQLite (if supported by library version)
* Feature: copy album arts from source if supported by target format (MP3/4).
           Use --noalbumarts parameter to disable, e.g., for streaming files.

* Bugfix: Only four lines of code: Avoid locking other clients when trying to get
          the size of a file currently being decoded. Also speeds up directory 
          access quite significantly.
* Bugfix: Fix lost frames at end of files (files where cut short)